user delete add & test add
