# public/swagger-memory-shared/openapi.json
@@ -40,7 +40,10 @@
                                     "properties": {
                                         "data": {
                                             "description": "statusがMEMBERのユーザデータを返す",
-                                            "type": "object"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/user_list"
+                                            }
                                         }
                                     },
                                     "type": "object"
@@ -71,7 +74,7 @@
                 ]
             }
         },
-        "/api/users/{ユーザ名}": {
+        "/api/users/{user}": {
             "get": {
                 "tags": [
                     "users"
@@ -89,35 +92,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success (存在するユーザかつステータスがMEMBERのユーザデータを返す)",
+                        "description": "Success",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "id": {
-                                            "description": "ユーザID",
-                                            "type": "integer",
-                                            "example": "1"
-                                        },
-                                        "name": {
-                                            "description": "ユーザ名",
-                                            "type": "string",
-                                            "example": "root"
-                                        },
-                                        "email": {
-                                            "description": "メールアドレス",
-                                            "type": "string",
-                                            "example": "root@xxx.co.jp"
-                                        },
-                                        "status": {
-                                            "description": "ステータス",
-                                            "type": "integer",
-                                            "example": "1"
-                                        },
-                                        "image_file": {
-                                            "description": "プロフィール画像のファイル名",
-                                            "type": "string",
-                                            "example": "xxxxoooo.png"
+                                        "data": {
+                                            "$ref": "#/components/schemas/user_list"
                                         }
                                     },
                                     "type": "object"
@@ -163,6 +144,42 @@
                 "produces": [
                     "application/json"
                 ]
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "user_list": {
+                "required": [
+                    "id",
+                    "name",
+                    "email",
+                    "status",
+                    "image_file"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "test1"
+                    },
+                    "email": {
+                        "type": "string",
+                        "example": "test1@xxx.co.jp"
+                    },
+                    "status": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "image_file": {
+                        "type": "string",
+                        "example": "xxxxoooo.png"
+                    }
+                },
+                "type": "object"
             }
         }
     }
